--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
+	height: 100%;
 	width: 100%;
-	margin: 30px;
+	margin: 0px;
+	padding: 0px;
+	font-family: Arial, Helvetica, sans-serif;
 	background-color: black;
 }
 
@@ -17,5 +20,9 @@ body {
 }
 
 #profile-name{
+	text-align: center;
+}
+
+#profile-job{
 	text-align: center;
 }
