--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-	background-color: black;
+	background-color: gray;
 }
 
 #profile-container {
@@ -25,5 +25,23 @@ body {
 }
 
 #profile-job{
+	text-align: center;
+}
+
+#heider{
+	width: 100%;
+	height: 50px;
+	line-height: 50px;
+	background-color: burlywoord;
+	text-align: center;
+}
+
+#footer{
+	width: 100%;
+	height: 50px;
+	position: absolute;
+	bottom: 0;
+	line-height: 50px;
+	background-color: burlywoord;
 	text-align: center;
 }
