--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 	width: 100%;
 	height: 50px;
 	line-height: 50px;
-	background-color: burlywoord;
+	background-color: pink;
 	text-align: center;
 }
 
@@ -42,6 +42,6 @@ body {
 	position: absolute;
 	bottom: 0;
 	line-height: 50px;
-	background-color: burlywoord;
+	background-color: pink;
 	text-align: center;
 }
